fixed column spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -57,7 +57,7 @@ header nav {
 
 .main-container {
   display: flex;
-  width: 1232px;
+  width: 1270px;
   margin: 0 auto 78px auto;
   padding-top: 110px;
   /* border: 1px solid black */
